# qtstreamer

./: .gitignore  CMakeLists.txt  README.md  dialog.cpp  dialog.h  dialog.ui  editor.cpp  editor.h  editor.ui  main.cpp  qtstreamer.pro
cmake/: GetGitRevisionDescription.cmake
